force-app/main/default/objects/Volunteer_Event__c/fields/Registration_Phone__c.field-meta.xml
<CustomField>
    <fullName>Registration_Phone__c</fullName>
    <description>AARP.org / CTG.org Phone number</description>
    <inlineHelpText>Driver Safety users may enter the Driver Safety Registration Line 877-805-0458. States users may enter the Toll-Free Registration Line 877-926-8300. 
If you’re not using a registration call center, please enter a Registration Phone.</inlineHelpText>
    <label>Registration Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>