force-app/main/default/objects/Volunteer_Event__c/fields/Seats_Available__c.field-meta.xml
<CustomField>
    <fullName>Seats_Available__c</fullName>
    <description>This field will enable the programs to take proactive action when an event capacity is close to being reached, rather than having to follow the more cumbersome process that would be required after capacity has already been reached. This is in support of their Event Management business processes.</description>
    <formula>IF(Capacity__c  &gt;= 1,Capacity__c  -  Total_Accepted__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>