force-app/main/default/objects/Volunteer_Event__c/fields/Source_System_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Indicator__c</fullName>
    <description>Provides user indication of where the record was created</description>
    <formula>IF(Event_Created_in_Cvent__c ,&quot;This event was created in Cvent. Any updates to this event must be made in Cvent.&quot;,&quot;This event was created in Volunteer Portal.&quot;)</formula>
    <label>Source System Indicator</label>
    <type>Text</type>
</CustomField>