force-app/main/default/objects/Volunteer_Event__c/fields/Summary_URL__c.field-meta.xml
<CustomField>
    <fullName>Summary_URL__c</fullName>
    <label>Summary URL</label>
    <type>Url</type>
</CustomField>