force-app/main/default/objects/Volunteer_Event__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <inlineHelpText>The time zone for the event&#39;s location.</inlineHelpText>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(GMT-10:00) Hawaii</fullName>
            </value>
            <value>
                <fullName>(GMT-09:00) Alaska</fullName>
            </value>
            <value>
                <fullName>(GMT-08:00) Pacific [US &amp; Canada]</fullName>
            </value>
            <value>
                <fullName>(GMT-07:00) Mountain [US &amp; Canada]</fullName>
            </value>
            <value>
                <fullName>(GMT-06:00) Central [US &amp; Canada]</fullName>
            </value>
            <value>
                <fullName>(GMT-05:00) Eastern [US &amp; Canada]</fullName>
            </value>
            <value>
                <fullName>(GMT-07:00) Arizona</fullName>
            </value>
            <value>
                <fullName>(GMT-04:00) Atlantic Standard Time (AST)</fullName>
                <label>(GMT-04:00) Puerto Rico</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>