force-app/main/default/objects/Volunteer_Event__c/fields/Total_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Total_Accepted__c</fullName>
    <description>Total Accepted = count of Event Registrants where (Registrant Status = Accepted)</description>
    <label>Total Accepted</label>
    <summaryFilterItems>
        <field>Event_Registrant__c.Registrant_Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Registrant__c.Volunteer_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>