force-app/main/default/objects/Volunteer_Event__c/fields/Unlimited__c.field-meta.xml
<CustomField>
    <fullName>Unlimited__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if there are no space limitations for the event. If this checkbox is checked, &quot;Capacity&quot; should be left blank.</inlineHelpText>
    <label>Unlimited</label>
    <type>Checkbox</type>
</CustomField>