force-app/main/default/objects/Volunteer_Event__c/fields/Visited__c.field-meta.xml
<CustomField>
    <fullName>Visited__c</fullName>
    <label>Visited</label>
    <summaryFilterItems>
        <field>Event_Registrant__c.Registrant_Status__c</field>
        <operation>equals</operation>
        <value>Visited</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Registrant__c.Volunteer_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>