force-app/main/default/objects/Volunteer_Event__c/fields/Volunteer_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Event_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Event ID</label>
    <type>Text</type>
</CustomField>