force-app/main/default/objects/Volunteer_Event__c/fields/Volunteer_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Event_Type__c</fullName>
    <description>Pulled in from CVENT or event template object if record created in portal</description>
    <label>Volunteer Event Type</label>
    <type>TextArea</type>
</CustomField>