force-app/main/default/objects/Volunteer_Event__c/fields/Waitlisted__c.field-meta.xml
<CustomField>
    <fullName>Waitlisted__c</fullName>
    <description>Waitlisted = count of Event Registrants where (Registrant Status = Waitlisted)</description>
    <label>Waitlisted</label>
    <summaryFilterItems>
        <field>Event_Registrant__c.Registrant_Status__c</field>
        <operation>equals</operation>
        <value>Waitlisted</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Registrant__c.Volunteer_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>