force-app/main/default/objects/Volunteer_Event__c/recordTypes/Driver_Safety_Event.recordType-meta.xml
<RecordType>
    <fullName>Driver_Safety_Event</fullName>
    <active>true</active>
    <description>The record type is assigned to the Driver Safety Event page layout</description>
    <label>Driver Safety Event</label>
</RecordType>