force-app/main/default/objects/Volunteer_Event__c/recordTypes/Volunteer_Event_Closed.recordType-meta.xml
<RecordType>
    <fullName>Volunteer_Event_Closed</fullName>
    <active>true</active>
    <description>Record type assigned when Cvent Event Status = Closed</description>
    <label>Volunteer Event - Closed</label>
</RecordType>