force-app/main/default/objects/Volunteer_Event__c/recordTypes/Volunteer_Event_Completed_Closed_Cancelled.recordType-meta.xml
<RecordType>
    <fullName>Volunteer_Event_Completed_Closed_Cancelled</fullName>
    <active>true</active>
    <description>Record type assigned when Cvent Event Status = Completed OR Closed OR Cancelled</description>
    <label>Volunteer Event (Completed, Closed, Cancelled)</label>
</RecordType>