force-app/main/default/objects/Volunteer_Event__c/recordTypes/Volunteer_Event_Default.recordType-meta.xml
<RecordType>
    <fullName>Volunteer_Event_Default</fullName>
    <active>true</active>
    <description>Default record type for Volunteer Events</description>
    <label>Volunteer Event</label>
</RecordType>