force-app/main/default/objects/Volunteer_Event__c/validationRules/End_date_set_after_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_set_after_start_date</fullName>
    <active>true</active>
    <description>Event End must be equal to or later than Event Start</description>
    <errorConditionFormula>Event_Start__c  &gt;=  Event_End__c</errorConditionFormula>
    <errorMessage>Event end date must be after the event start date</errorMessage>
</ValidationRule>