force-app/main/default/objects/Volunteer_Event__c/validationRules/Location_Required_for_SDTEK_Event.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Required_for_SDTEK_Event</fullName>
    <active>true</active>
    <description>Requires location record for Volunteer Event where Volunteer Event Type = Smart DriverTEK.</description>
    <errorConditionFormula>AND(

(Event_Template__r.Volunteer_Event_Type__c = &quot;Smart DriverTEK&quot;),

ISBLANK(Host_Location__c) 

)</errorConditionFormula>
    <errorDisplayField>Host_Location__c</errorDisplayField>
    <errorMessage>Smart DriverTEK Volunteer Events must have a Location selected.</errorMessage>
</ValidationRule>