force-app/main/default/objects/Volunteer_Event__c/validationRules/Prevent_Change_of_Event_Template.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Change_of_Event_Template</fullName>
    <active>true</active>
    <description>The Event Template selected cannot be changed after saving a Volunteer Event record.</description>
    <errorConditionFormula>ISCHANGED(Event_Template__c)</errorConditionFormula>
    <errorMessage>The Event Template cannot be modified after a Volunteer Event record has been saved. If the Event Template was selected in error, please set the Event Cancellation Needed field to “Yes” and create a new Volunteer Event with the correct Event Template.</errorMessage>
</ValidationRule>