force-app/main/default/objects/Volunteer_Event__c/validationRules/Prevent_from_editing.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_from_editing</fullName>
    <active>false</active>
    <description>Prevents fields from editing if Event Created in &quot;Cvent&quot; is TRUE</description>
    <errorConditionFormula>AND(
Event_Created_in_Cvent__c = true,
 $Profile.Name &lt;&gt; &quot;System Integrator&quot;,
 NOT(ISCHANGED(Participants__c)) 
)</errorConditionFormula>
    <errorMessage>Record cannot be edited (except for Participants) and saved if record was created in Cvent.</errorMessage>
</ValidationRule>