force-app/main/default/objects/Volunteer_Event__c/validationRules/Registration_Deadline_Before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_Deadline_Before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>DateTimeValue(Registration_Deadline__c) &gt; DateTimeValue(Event_End__c)</errorConditionFormula>
    <errorMessage>The Registration Deadline cannot be after the Event End Date</errorMessage>
</ValidationRule>