force-app/main/default/objects/Volunteer_Event__c/validationRules/Registration_Phone_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_Phone_format</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
Event_Created_in_Cvent__c = false, 
 $Profile.Name &lt;&gt; &quot;System Integrator&quot;, 
 !REGEX(Registration_Phone__c, &quot;^(\\d{3}\\-\\d{3}-\\d{4})?$&quot;) 
)</errorConditionFormula>
    <errorMessage>Registration Phone must be in the format XXX-XXX-XXXX</errorMessage>
</ValidationRule>