force-app/main/default/objects/Volunteer_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Title__c</columns>
    <columns>Program__c</columns>
    <columns>Volunteer_Event_Type__c</columns>
    <columns>Event_Start__c</columns>
    <columns>Event_Leader__c</columns>
    <columns>Cvent_Event_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>