force-app/main/default/objects/Volunteer_Event__c/listViews/All_Active_Volunteer_Events.listView-meta.xml
<ListView>
    <fullName>All_Active_Volunteer_Events</fullName>
    <columns>NAME</columns>
    <columns>Event_Title__c</columns>
    <columns>Event_Template__c</columns>
    <columns>Cvent_Event_Status__c</columns>
    <columns>Event_Leader__c</columns>
    <columns>Total_Accepted__c</columns>
    <columns>Event_Start_Date__c</columns>
    <columns>Event_Start_Time__c</columns>
    <columns>Event_End_Date__c</columns>
    <columns>Event_End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cvent_Event_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Volunteer Events</label>
</ListView>