force-app/main/default/objects/Volunteer_Event__c/listViews/Driver_Safety_Pending_Events.listView-meta.xml
<ListView>
    <fullName>Driver_Safety_Pending_Events</fullName>
    <columns>NAME</columns>
    <columns>Event_Title__c</columns>
    <columns>Cvent_Event_Status__c</columns>
    <columns>Event_Start_Date__c</columns>
    <columns>Event_Start_Time__c</columns>
    <columns>Event_End_Date__c</columns>
    <columns>Event_End_Time__c</columns>
    <columns>Event_Leader_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Program__c</field>
        <operation>startsWith</operation>
        <value>DS</value>
    </filters>
    <label>Driver Safety Pending Events</label>
    <sharedTo>
        <group>Driver_Safety_Staff</group>
    </sharedTo>
</ListView>