force-app/main/default/objects/Volunteer_Event__c/listViews/My_Events.listView-meta.xml
<ListView>
    <fullName>My_Events</fullName>
    <columns>NAME</columns>
    <columns>Event_Title__c</columns>
    <columns>Cvent_Event_Status__c</columns>
    <columns>Event_Start_Date__c</columns>
    <columns>Event_Start_Time__c</columns>
    <columns>Host_Location__c</columns>
    <columns>Event_Leader__c</columns>
    <columns>Capacity__c</columns>
    <columns>Seats_Available__c</columns>
    <columns>Total_Accepted__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Event_Title__c</field>
        <operation>contains</operation>
        <value>Smart DriverTEK</value>
    </filters>
    <label>SDTEK Workshops I Created</label>
    <sharedTo>
        <group>Driver_Safety_Staff</group>
        <group>Driver_Safety_Volunteer_Leaders</group>
        <group>Driver_Safety_Volunteer_Portal_Users</group>
    </sharedTo>
</ListView>