force-app/main/default/objects/Volunteer_Event__c/listViews/States.listView-meta.xml
<ListView>
    <fullName>States</fullName>
    <columns>NAME</columns>
    <columns>Event_Template__c</columns>
    <columns>Event_Title__c</columns>
    <columns>Program__c</columns>
    <columns>Event_Created_in_Cvent__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Cvent_Event_Status__c</columns>
    <columns>Registration_Deadline__c</columns>
    <columns>Event_Start_Date__c</columns>
    <columns>Event_Start_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>startsWith</operation>
        <value>ST</value>
    </filters>
    <label>States Volunteer Events</label>
    <language>en_US</language>
</ListView>